# AIMA

./: .gitignore  .travis.yml  CMakeLists.txt  main.cpp
dstruct/: priority_queue.h
example/: map.cpp  map.h  n_queens.cpp  n_queens.h  romania.cpp  romania.h
search/: CMakeLists.txt
search/commons/: best_first.h  graph_search.cpp  graph_search.h  problem.h  tree_search.cpp  tree_search.h
search/informed_search/: rbfs.h
search/uninformed_search/: bfs.h  dfs.h  ids.h
test/: main-test.cpp  test-tree-search.cpp  test-util-string_ops.cpp
test/dstruct/: test-priority_queue.cpp
test/example/: test-n_queens.cpp
test/search/commons/: test-bfs.cpp  test-graph-search.cpp  test-graph_search.cpp  test-tree-search.cpp
test/search/informed_search/: test-A_star_search.cpp  test-greedy_best_first.cpp  test-recursive_best_first_search.cpp
test/search/uninformed_search/: test-A_star_search.cpp  test-breadth_first_search.cpp  test-depth_first_search.cpp  test-depth_limited_search.cpp  test-greedy_best_first.cpp  test-iterative_depth_first_search.cpp  test-uniform_search.cpp
test/utilities/: test-util-string_ops.cpp
utilities/: optional.h  string_ops.cpp  string_ops.h
